--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <CheckBoxPreference android:key="maximizeVolume" android:title="@string/pref_maximize_volume_title" android:defaultValue="true"/>
+    <CheckBoxPreference android:defaultValue="true" android:key="playOnLaunch" android:title="@string/pref_play_on_launch_title"/>
 
     
 
